--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
-  text-align: center;
+  background-image: url(./images/background.jpg);
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.header .heading1{
   color: white;
+  font-size: 150px;
+  font-weight: 900;
+  margin: 0px 50px 0 0;
+  padding-top: 20px;
+  padding-left: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.header .paragraph1{
+  color: rgb(102, 102, 121);
+  font-size: 50px;
+  margin: 0px 50px 0 0;
+  padding-top: 20px;
+  padding-left: 40px;
+  padding-bottom: 80px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 900px){
+  .header .heading1{
+    font-size: 80px;
   }
-  to {
-    transform: rotate(360deg);
+  .header .paragraph1{
+    font-size: 40px;
+  }
+  .App{
+    background-size: cover;
   }
 }
+
+
