--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
-.App {
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+.header {
   background-image: url(./images/background.jpg);
   background-size: cover;
 }
@@ -8,17 +16,18 @@
   font-size: 150px;
   font-weight: 900;
   margin: 0px 50px 0 0;
-  padding-top: 20px;
+  padding-top: 30px;
   padding-left: 40px;
+  padding-bottom: 50px;
 }
 
 .header .paragraph1{
   color: rgb(102, 102, 121);
-  font-size: 50px;
+  font-size: 35px;
   margin: 0px 50px 0 0;
   padding-top: 20px;
   padding-left: 40px;
-  padding-bottom: 80px;
+  padding-bottom: 98px;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -34,4 +43,42 @@
   }
 }
 
+.hero {
+  background-color: rgb(113, 114, 37);
+  color: rgb(255, 255, 255);
+  min-width: 100%;
+  
+}
+.class-list{
+  color: rgb(12, 12, 12);
+  text-align: center;
+  font-size: 60px;
+  font-weight: 900;
+  padding-top: 30px;
+  
+}
+.savoury-dishes{
+  color: rgb(12, 12, 12);
+  text-align: center;
+  padding: 10px 0;
+  font-size: 40px;
 
+}
+.savoury{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 40px;
+  margin-bottom: 40px;
+  margin: 0 30px;
+}
+.row{
+  border: 1px solid black;
+  box-shadow: 0px 4px 15px rgba(214, 196, 79, 0.5); 
+  border-radius: 8px;
+  padding: 16px;
+  text-align: center;
+  margin: 10px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(14, 13, 13);
+}
