--- a/src/App.css
+++ b/src/App.css
@@ -44,13 +44,13 @@ html, body {
 }
 
 .hero {
-  background-color: rgb(113, 114, 37);
+  background-color: rgb(92, 109, 19);
   color: rgb(255, 255, 255);
   min-width: 100%;
   
 }
 .class-list{
-  color: rgb(12, 12, 12);
+  color: rgb(250, 250, 250);
   text-align: center;
   font-size: 60px;
   font-weight: 900;
@@ -58,7 +58,8 @@ html, body {
   
 }
 .savoury-dishes{
-  color: rgb(12, 12, 12);
+  color: rgb(17, 17, 17);
+  text-decoration: underline;
   text-align: center;
   padding: 10px 0;
   font-size: 40px;
@@ -69,16 +70,16 @@ html, body {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 40px;
   margin-bottom: 40px;
-  margin: 0 30px;
+  margin: 0 40px;
 }
 .row{
   border: 1px solid black;
-  box-shadow: 0px 4px 15px rgba(214, 196, 79, 0.5); 
+  box-shadow: 0px 4px 15px rgba(253, 253, 251, 0.5); 
   border-radius: 8px;
   padding: 16px;
   text-align: center;
   margin: 10px;
   align-items: center;
   justify-content: center;
-  background-color: rgb(14, 13, 13);
+  background-color: rgb(14, 13, 13); 
 }
