--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ body {
   color: rgb(139, 136, 136);
 }
 
-.row {
+.row-recipe {
   border: 1px solid black;
   box-shadow: 0px 4px 15px rgba(214, 196, 79, 0.5);
   text-align: center;
@@ -115,3 +115,5 @@ body {
   
 
 }
+
+
