--- a/src/recipedetails.css
+++ b/src/recipedetails.css
@@ -1,6 +1,15 @@
 body{
-    height: 100;
+    height: 100%;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 20px;
+    background: lightblue;
+    text-decoration: center;
 }
+title{
+    line-height: 1.2;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+}
+
