--- a/src/recipedetails.css
+++ b/src/recipedetails.css
@@ -5,43 +5,74 @@ body{
     box-sizing: border-box;
     font-size: 20px;
     background: black;
-    text-align: center;
-    align-items: center;
+    
 }
 .container{
     align-items: center;
-    color: lightblue;
-    font-size: 25px;
+    color: rgb(253, 253, 253);
+    /* font-size: 25px; */
     
 }
-title{
+.container-details{
+    max-width: 900px;
+    border: 1px solid black;
+    margin: auto;
+    display: block;
+    margin-top: 40px;
+    box-shadow: 0px 4px 15px rgba(214, 196, 79, 0.5);
+}
+.back-button{
+  color: white;
+  background-color: black;
+  border: 1px solid white;
+  box-shadow: 0px 4px 15px rgba(214, 196, 79, 0.5);
+  margin: 30px;
+  padding: 2px;
+  width: 200px;
+  height: 30px;
+  text-align: center;
+  align-items: center;
+  margin: auto;
+  display: block;
+}
+.title{
     line-height: 1.2;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
+    margin-top: 20px;
+    font-size: 50px;
+    color: rgb(107, 167, 30);
+}
+.recipes-picture{
+    margin: auto;
+    display: block;
+    border-radius: 2px;
+    margin-bottom: 10px;
+    box-shadow: 0px 4px 15px rgba(214, 196, 79, 0.5);
 }
 .descriptions{
     font-size: 30px;
   padding-top: 5px;
-  color: lightblue;
+  color: rgb(253, 253, 253);
 }
 .ingredients{
-    align-items: center;
+
   font-size: 20px;
-  color: lightblue;
+  color: rgb(240, 242, 243);
 }
 .ingredients-h3{
-    color: blue;
+    color: rgb(107, 167, 30);
     font-size: 50px;
     align-items: center;
 }
 .steps-h3{
-    color: blue;
+    color: rgb(107, 167, 30);
     font-size: 50px;
     
 }
 .steps{
-    align-items: center;
-    color: lightblue;
+
+    color: rgb(251, 253, 253);
 }
 
 
